# elb-logs-to-cloudwatch

./: .clog.toml  .editorconfig  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build-lambda-from-releases.sh  build-lambda.sh  iam.tf  lambda.tf  lambda_trigger.tf  provider.tf  variables.tf  versions.tf
.github/workflows/: publish.yml  terraform.yml  tests.yml
benches/: void.rs
src/: config.rs  error.rs  handlers.rs  lib.rs  log_processing.rs  main.rs  pipelines.rs  s3.rs  types.rs
src/output/: buffered_trait.rs  cloudwatch_logs.rs  cloudwatch_metric.rs  mod.rs  stdout.rs  void.rs
tests/fixtures/: bad_logs.txt  logs.txt
