[package]
name = "elb-logs-to-cloudwatch"
version = "0.1.0"
authors = ["Jayson Reis <santosdosreis@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.26"
aws_lambda_events = "0.2.5"
chrono = "0.4.10"
csv = "1.1.3"
env_logger = "0.7.1"
failure = "0.1.6"
flate2 = "1.0.13"
itertools = "0.8.2"
lambda_runtime = "0.2.1"
lazy_static = "1.4.0"
log = "0.4.8"
rusoto_cloudwatch = "0.42.0"
rusoto_core = "0.42.0"
rusoto_s3 = "0.42.0"
serde = {version = "1.0.104", features = ["derive"]}
serde_json = "1.0.48"
smallvec = "1.2.0"
structopt = "0.3.9"
thiserror = "1.0.9"

wirefilter-engine = {git = "https://github.com/cloudflare/wirefilter", branch = "master"}
